fix alignment

--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@ a {
 }
 
 .challenges{
-    padding-top: 20px;
     padding-bottom: 20px;
 } 
 
